# IPCTransport

./: .gitignore  CMakeLists.txt  README.md
ipc/: CMakeLists.txt
ipc/base/: CMakeLists.txt
ipc/base/include/: IIPCMessage.hpp  IIPCTransport.hpp
ipc/factory/: CMakeLists.txt
ipc/factory/include/: IPCTransportFactory.hpp
ipc/factory/src/: IPCTransportFactory.cxx
ipc/msg_queue/: CMakeLists.txt
ipc/msg_queue/include/: MsgQueueTransport.hpp
ipc/msg_queue/src/: MsgQueueTransport.cxx
ipc/pipe/: CMakeLists.txt
ipc/pipe/include/: PipeTransport.hpp
ipc/pipe/src/: PipeTransport.cxx
ipc/shared_memory/: CMakeLists.txt
ipc/shared_memory/include/: SharedMemoryTransport.hpp
ipc/shared_memory/src/: SharedMemoryTransport.cxx
ipc/signals/: CMakeLists.txt
ipc/signals/include/: SignalTransport.hpp
ipc/signals/src/: SignalTransport.cxx
ipc/socket/: CMakeLists.txt
ipc/socket/include/: TCPSocketTransport.hpp
ipc/socket/src/: TCPSocketTransport.cxx
src/: main.cxx
tests/: CMakeLists.txt  test_message_queue.cxx  test_pipe.cxx  test_shared_memory.cxx  test_signal.cxx  test_socket.cxx
